syntax = "proto3";

package customerDirectory;

service CustomerDirectoryService {
    rpc createCustomer (CreateCustomerMsg) returns (CreatedCustomer) {
    }
}

message CreateCustomerMsg {
    string name = 1;
}

message CreatedCustomer {
    string id = 1;
    string name = 2;
    string createdAt = 3;
    string updatedAt = 4;
}
